fix: :bug: Fix de overflow en bundles dinámicos con precios de muchos decimales y texto largo

--- a/chrome_extension/css/styles.css
+++ b/chrome_extension/css/styles.css
@@ -25,6 +25,12 @@ body.menu-enabled .responsive_page_frame {
   transition: all 0.5s ease;
 }
 
+.game_area_purchase_game_dropdown_subscription .game_purchase_action .btn_packageinfo span {
+  max-width: 110px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
 .cart_area_body .cart_item {
   min-height: 90px;
 }
